syntax = "proto3";

package test.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "j5/messaging/v1/annotations.proto";
import "test/v1/greeting.proto";

option go_package = "github.com/pentops/o5-test-app/internal/gen/test/v1/test_tpb";

service TestTopic {
  option (j5.messaging.v1.config).broadcast.name = "o5-test-topic";

  rpc Greeting(GreetingMessage) returns (google.protobuf.Empty) {}
}

message GreetingMessage {
  string greeting_id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2 [(buf.validate.field).required = true];

  // When not-nil, the handler will throw an error back to the sidecar which
  // should result in a dead letter.
  test.v1.TestError worker_error = 4;
}
